# advent-of-code-2021

./: .gitignore  Cargo.toml  README.txt  template.rs
src/: inp.rs
